“Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file”.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
 </head>
-
 <body>
-
-Hello Worldd
-ini
-
+<div id="profile-container">
+<img id="profile-image" src="muflih1.jpeg"profile image" /> <h2 id="profile-name">Muflih Ramadhan</h2>
+</div>
 </body>
+</html>
